--- a/package.json
+++ b/package.json
@@ -14,41 +14,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/router": "^17.0.0",
+    "@angular/animations": "^18.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/forms": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
     "@fortawesome/fontawesome-free": "^6.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "intl-tel-input": "^19.0.0",
-    "intl-tel-input-ng": "^0.11.0",
+    "intl-tel-input-ng": "^0.12.0",
     "lodash": "^4.17.10",
-    "ng-http-loader": "^15.0.0",
+    "ng-http-loader": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular-eslint/builder": "^17.0.0",
-    "@angular-eslint/eslint-plugin": "^17.0.0",
-    "@angular-eslint/eslint-plugin-template": "^17.0.0",
-    "@angular-eslint/schematics": "^17.0.0",
-    "@angular-eslint/template-parser": "^17.0.0",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.0",
+    "@angular-devkit/build-angular": "^18.0.0",
+    "@angular-eslint/builder": "18.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin": "18.0.0-alpha.1",
+    "@angular-eslint/eslint-plugin-template": "18.0.0-alpha.1",
+    "@angular-eslint/schematics": "18.0.0-alpha.1",
+    "@angular-eslint/template-parser": "18.0.0-alpha.1",
+    "@angular/cli": "^18.0.0",
+    "@angular/compiler-cli": "^18.0.0",
     "@cypress/schematic": "^2.5.1",
     "@types/jasmine": "~5.1.0",
-    "@typescript-eslint/eslint-plugin": "6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
+    "@typescript-eslint/eslint-plugin": "7.10.0",
+    "@typescript-eslint/parser": "7.10.0",
     "cypress": "latest",
-    "eslint": "^8.53.0",
+    "eslint": "^8.57.0",
     "jasmine-core": "~5.1.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
@@ -57,7 +57,7 @@
     "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "puppeteer": "^21.0.0",
-    "typescript": "~5.2.2"
+    "puppeteer": "^22.0.0",
+    "typescript": "~5.4.2"
   }
 }
