--- a/.github/workflows/npmupdate.yml
+++ b/.github/workflows/npmupdate.yml
@@ -30,7 +30,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - name: update
+      - name: Run npm update
         run: |
           npm update
 
