--- a/.github/workflows/npmupdate.yml
+++ b/.github/workflows/npmupdate.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
+          token: "GH Token"
           commit-message: "chore: npm update"
           committer: 'Michel Palourdio <mpalourdio@gmail.com>'
           author: 'Michel Palourdio <mpalourdio@gmail.com>'
