--- a/.github/workflows/npmupdate.yml
+++ b/.github/workflows/npmupdate.yml
@@ -11,11 +11,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write
-      pull-requests: write
-      issues: write
-
     strategy:
       max-parallel: 4
       matrix:
@@ -37,7 +32,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
-          token: "GH Token"
+          token: ${{ secrets.GH_TOKEN }}
           commit-message: "chore: npm update"
           committer: 'Michel Palourdio <mpalourdio@gmail.com>'
           author: 'Michel Palourdio <mpalourdio@gmail.com>'
