--- a/.github/workflows/npmupdate.yml
+++ b/.github/workflows/npmupdate.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GH2 }}
           commit-message: "chore: npm update"
           committer: 'Michel Palourdio <mpalourdio@gmail.com>'
           author: 'Michel Palourdio <mpalourdio@gmail.com>'
