--- a/.github/workflows/npmupdate.yml
+++ b/.github/workflows/npmupdate.yml
@@ -1,8 +1,8 @@
 name: npm update
 
-on:
-  schedule:
-    - cron: "*/5 * * * *"
+on: [ workflow_dispatch ]
+#  schedule:
+#    - cron: "*/5 * * * *"
 
 env:
   FORCE_COLOR: 3
