--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@angular/build": "^20.0.0",
-    "@angular-builders/jest": "20.0.0-beta.0",
+    "@angular-builders/jest": "^20.0.0",
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
     "@cypress/schematic": "^2.5.1",
