--- a/angular.json
+++ b/angular.json
@@ -73,17 +73,11 @@
           "builder": "@angular/build:extract-i18n"
         },
         "test": {
-          "builder": "@angular-builders/jest:run",
+          "builder": "@angular/build:unit-test",
           "options": {
-            "configPath": "./jest.config.ts",
-            "tsConfig": "tsconfig.spec.json",
             "watch": false,
-            "styles": [
-              "src/styles.scss"
-            ],
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
+            "coverageReporters": [
+              "lcovonly"
             ]
           }
         },
