--- a/package.json
+++ b/package.json
@@ -14,42 +14,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.0.0",
-    "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/platform-browser-dynamic": "^20.0.0",
-    "@angular/router": "^20.0.0",
+    "@angular/animations": "^21.0.0",
+    "@angular/common": "^21.0.0",
+    "@angular/compiler": "^21.0.0",
+    "@angular/core": "^21.0.0",
+    "@angular/forms": "^21.0.0",
+    "@angular/platform-browser": "^21.0.0",
+    "@angular/router": "^21.0.0",
     "@fortawesome/fontawesome-free": "^6.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "intl-tel-input": "^19.0.0",
-    "intl-tel-input-ng": "^0.18.0",
+    "intl-tel-input-ng": "^0.19.0",
     "lodash": "^4.17.10",
-    "ng-http-loader": "^18.0.0",
+    "ng-http-loader": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.0",
-    "@angular-builders/jest": "^20.0.0",
-    "@angular/cli": "^20.0.0",
-    "@angular/compiler-cli": "^20.0.0",
+    "@angular/build": "^21.0.0",
+    "@angular/cli": "^21.0.0",
+    "@angular/compiler-cli": "^21.0.0",
     "@cypress/schematic": "^2.5.1",
     "@smarttools/eslint-plugin-rxjs": "^1.0.18",
-    "@types/jest": "^29.5.14",
     "@typescript-eslint/parser": "^8.23.0",
+    "@vitest/coverage-v8": "^4.0.12",
     "angular-eslint": "^20.0.0",
     "cypress": "^14.2.0",
     "eslint": "^9.28.0",
-    "jest": "^29.7.0",
-    "jest-preset-angular": "^14.5.3",
+    "jsdom": "^27.1.0",
     "puppeteer": "^24.0.0",
-    "typescript": "~5.8.2",
+    "typescript": "~5.9.2",
     "typescript-eslint": "^8.33.1",
-    "zone.js": "~0.15.0"
+    "vitest": "^4.0.8"
   }
 }
