--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      day: "monday"
     allow:
       - dependency-type: "direct"
     versioning-strategy: "lockfile-only"
@@ -12,3 +13,4 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+      day: "monday"
